--- a/css/style.css
+++ b/css/style.css
@@ -4,3 +4,46 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.main {
+    display: flex;
+    width: 100%;
+    height: calc(100vh - 80px);
+    background-color: green;
+}
+
+.sidebar {
+    width: 200px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+}
+
+.main .main-content {
+    width: calc(100% - 200px);
+    height: 100%;
+    background-color: greenyellow;
+}
+
+.main .main-header {
+    position: fixed;
+    width: 100%;
+    height: 80px;
+    background-color: rgba(0, 0, 0, 0.5);
+    text-align: right;
+    line-height: 80px;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 80px;
+    background-color: yellow;
+}
+
+.footer .col{
+    background-color: aqua;
+}
