--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,7 @@ a {
 
 .sidebar ul:first-child li:nth-child(2) {
     margin-left: -1.2rem;
-    padding-left: 1rem;
+    padding: .2rem 0 .2rem 1rem;
     border-left: 2px solid greenyellow;
 }
 
@@ -112,7 +112,15 @@ a {
 .main .main-content {
     width: calc(100% - 200px);
     height: 100%;
+    padding-top: 80px;
     background-color: #141922;
+    color: #a3a3a3;
+}
+
+.main .main-content .title h2 {
+    color: white;
+    margin-bottom: 1.5rem;
+    margin-left: 1.3rem;
 }
 /* MAIN-HEADER */
 .main .main-header {
@@ -127,11 +135,57 @@ a {
 }
 
 .main .main-header a {
+    display: inline-block;
+    line-height: normal;
     padding: .8rem 2.5rem;
     border: 1px solid white;
     border-radius: 50px;
     color: white;
     font-weight: 600;
+}
+
+/* CARDS-CONTAINER */
+.main-content .cards-container .menu {
+    padding: 1rem 0;
+    text-align: center;
+}
+
+.cards-container .menu ul li {
+    display: inline-block;
+    margin-right: 1rem;
+    font-size: .8rem;
+    font-weight: 700;
+}
+
+.cards-container .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.cards-container .card {
+    width: 10vw;
+    height: 15vw;
+    background-color: red;
+    border: 1px solid green;
+    text-align: center;
+}
+
+.card .img-container img {
+    width: 100%;
+    height: 10vw;
+    margin-bottom: .3rem;
+}
+
+.card .title {
+    font-size: .8rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: .3rem;
+}
+
+.card .sub-title {
+    font-size: .8rem;
 }
 /* FOOTER */
 .footer {
