--- a/css/style.css
+++ b/css/style.css
@@ -115,12 +115,19 @@ a {
     padding-top: 80px;
     background-color: #141922;
     color: #a3a3a3;
+    overflow: auto;
 }
 
-.main .main-content .title h2 {
+.title h2,
+.title p {
     color: white;
     margin-bottom: 1.5rem;
     margin-left: 1.3rem;
+}
+
+.main .main-content .title p {
+    font-weight: 700;
+    color: #a3a3a3;
 }
 /* MAIN-HEADER */
 .main .main-header {
@@ -137,6 +144,7 @@ a {
 .main .main-header a {
     display: inline-block;
     line-height: normal;
+    margin-right: 1.2rem;
     padding: .8rem 2.5rem;
     border: 1px solid white;
     border-radius: 50px;
@@ -160,21 +168,33 @@ a {
 .cards-container .row {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    padding: 0 1.3rem;
+    margin-bottom: 3rem;
+}
+
+.cards-container > .title:not(:nth-child(2)) h2 {
+    margin-bottom: .5rem;
 }
 
 .cards-container .card {
-    width: 10vw;
-    height: 15vw;
-    background-color: red;
-    border: 1px solid green;
+    width: 13vw;
     text-align: center;
+    margin-right: .5rem;
+}
+
+.cards-container .card:last-child {
+    margin-right: 0;
 }
 
 .card .img-container img {
     width: 100%;
-    height: 10vw;
+    height: 13vw;
     margin-bottom: .3rem;
+}
+
+.card .img-container.radius {
+    border-radius: 50%;
+    overflow: hidden;
 }
 
 .card .title {
