--- a/css/style.css
+++ b/css/style.css
@@ -214,9 +214,59 @@ a {
     align-items: center;
     width: 100%;
     height: 80px;
-    background-color: yellow;
+    padding: 0 1rem;
+    background-color: #282828;
+    color: white;
 }
 
 .footer .col{
-    background-color: aqua;
+    display: flex;
+    align-items: center;
+    height: 60%;
+}
+
+.footer .col.left .img-container {
+    height: 100%;
+    margin-right: .8rem;
+}
+
+.footer .col.left img {
+    height: 100%;
+}
+
+.footer .col.left .title {
+    font-size: .8rem;
+    font-weight: 700;
+    margin-right: 2rem;
+}
+
+.footer .col.left .title span,
+.footer .col.left .icons-container {
+    color: #a3a3a3;
+}
+
+.footer .col-center .icons-container {
+    text-align: center;
+    margin-bottom: .5rem;
+}
+
+.footer .col-center .icons-container i {
+    font-size: 1.3rem;
+    margin-right: 1rem;
+}
+
+.footer .bar {
+    display: inline-block;
+    width: 30vw;
+    height: 5px;
+    border: 2px solid gray;
+    vertical-align: middle;
+}
+
+.footer .col.right .bar {
+    width: 120px;
+}
+
+.footer .col.right .icons-container i {
+    margin-right: .7rem;
 }
