--- a/css/style.css
+++ b/css/style.css
@@ -60,9 +60,17 @@ a {
 }
 
 .sidebar ul:first-child li:nth-child(2) {
-    margin-left: -1.2rem;
-    padding: .2rem 0 .2rem 1rem;
-    border-left: 2px solid greenyellow;
+    position: relative;
+}
+
+.sidebar ul:first-child li:nth-child(2)::before {
+    content: "";
+    position: absolute;
+    top: -3px;
+    left: -20px;
+    width: 2px;
+    height: calc(100% + 6px);
+    background-color: greenyellow;
 }
 
 .sidebar .menu-list li.logo-container {
@@ -159,10 +167,25 @@ a {
 }
 
 .cards-container .menu ul li {
+    position: relative;
     display: inline-block;
     margin-right: 1rem;
     font-size: .8rem;
     font-weight: 700;
+}
+
+.cards-container .menu ul li:first-child::before {
+    content: "";
+    position: absolute;
+    bottom: -30%;
+    left: 35%;
+    width: 30%;
+    height: 2px;
+    background-color: greenyellow;
+}
+
+.cards-container .menu a:hover {
+    color: white;
 }
 
 .cards-container .row {
@@ -245,22 +268,50 @@ a {
     color: #a3a3a3;
 }
 
+.footer .col.left .title span:hover {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+.footer .col.left .icons-container i:hover {
+    color: white;
+}
+
 .footer .col-center .icons-container {
     text-align: center;
     margin-bottom: .5rem;
 }
 
 .footer .col-center .icons-container i {
-    font-size: 1.3rem;
+    font-size: 1.2rem;
     margin-right: 1rem;
+    vertical-align: middle;
+}
+
+.footer .col-center .icons-container i.play {
+    font-size: 2rem;
 }
 
 .footer .bar {
+    position: relative;
     display: inline-block;
     width: 30vw;
     height: 5px;
-    border: 2px solid gray;
+    border: 1px solid gray;
     vertical-align: middle;
+    background-color: gray;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.footer .bar::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    background-color: white;
 }
 
 .footer .col.right .bar {
