--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ a {
     width: 100%;
     height: calc(100vh - 80px);
     background-color: green;
+    overflow: hidden;
 }
 
 /* SIDEBAR-MENU */
@@ -73,6 +74,16 @@ a {
     background-color: greenyellow;
 }
 
+.sidebar .menu-list {
+    height: calc(100% - 100px);
+    min-height: 200px;
+    overflow: hidden;
+}
+
+.sidebar .menu-list ul:first-child {
+    height: 170px;
+}
+
 .sidebar .menu-list li.logo-container {
     margin-bottom: 1.5rem;
 }
@@ -81,7 +92,17 @@ a {
     width: 80%;
 }
 
-.sidebar .playlist li h3 {
+.sidebar .playlist {
+    height: calc(100% - 200px);
+}
+
+.sidebar .playlist .title,
+.sidebar .playlist .icons-container {
+    width: 80%;
+    margin: 1rem auto 0 auto;
+}
+
+.sidebar .playlist .title h3 {
     color: white;
 }
 
@@ -95,8 +116,14 @@ a {
     color: white;
 }
 
+.sidebar .playlist ul {
+    height: 100%;
+    overflow-y: auto;
+}
+
 .sidebar .menu-footer {
     width: 80%;
+    height: 100px;
     margin: 0 auto;
 }
 
@@ -194,7 +221,6 @@ a {
 
 .cards-container .row {
     display: flex;
-    flex-wrap: wrap;
     padding: 0 1.3rem;
     margin-bottom: 3rem;
 }
