flex replaced with float in the main structure

--- a/css/style.css
+++ b/css/style.css
@@ -20,9 +20,19 @@ a {
     color: inherit;
 }
 
+/* UTILITY */
+.clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.float-l {
+    float: left;
+}
+
  /* MAIN */
 .main {
-    display: flex;
     width: 100%;
     height: calc(100vh - 80px);
     background-color: green;
