--- a/css/style.css
+++ b/css/style.css
@@ -303,7 +303,6 @@ a {
 /* FOOTER */
 .footer {
     display: flex;
-    justify-content: space-between;
     align-items: center;
     width: 100%;
     height: 80px;
@@ -328,7 +327,7 @@ a {
 }
 
 .footer .col.left .title {
-    font-size: .8rem;
+    font-size: .6rem;
     font-weight: 700;
     margin-right: 2rem;
 }
@@ -347,13 +346,16 @@ a {
     color: white;
 }
 
-.footer .col-center .icons-container {
+.footer .col-center {
     text-align: center;
+    flex-grow: 1;
+}
+
+.footer .col-center .icons-container {
     margin-bottom: .5rem;
 }
 
 .footer .col-center .icons-container i {
-    font-size: 1.2rem;
     margin-right: 1rem;
     vertical-align: middle;
 }
@@ -404,6 +406,10 @@ a {
     cursor: pointer;
 }
 
+.footer .bar-container span {
+    font-size: .7rem;
+}
+
 .footer .col.right .bar {
     width: 120px;
 }
@@ -424,4 +430,33 @@ a {
 
 .footer .col-center .icons-container i.play:hover {
     transform: scale(1.2);
+}
+
+@media screen and (max-width: 1100px) and (min-width: 701px) {
+    .cards-container .menu ul li {
+        font-size: .7rem;
+    }
+
+    .cards-container .menu ul li:last-child {
+        display: block;
+        margin-top: .5rem;
+    }
+    
+    .cards-container .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .cards-container .card {
+        width: 15.5vw;
+        margin-right: .3rem;
+    }
+
+    .card .img-container {
+        height: 15.5vw;
+    }
+
+    .footer .col.left .title {
+        margin-right: 1rem;
+    }
 }
