--- a/css/style.css
+++ b/css/style.css
@@ -411,7 +411,7 @@ a {
 }
 
 .footer .col.right .bar {
-    width: 120px;
+    width: 80px;
 }
 
 .footer .col.right .icons-container i {
@@ -450,6 +450,7 @@ a {
     .cards-container .card {
         width: 15.5vw;
         margin-right: .3rem;
+        margin-bottom: 2rem;
     }
 
     .card .img-container {
@@ -462,5 +463,42 @@ a {
 
     .footer .col.left .title {
         margin-right: 1rem;
+    }
+}
+
+@media screen and (max-width: 700px) and (min-width: 601px) {
+    .main-content .cards-container .menu {
+        display: flex;
+        flex-wrap: wrap;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .main-content .cards-container .menu ul li:first-child,
+    .main-content .cards-container .menu ul li:nth-child(2),
+    .main-content .cards-container .menu ul li:nth-child(3) {
+        margin-bottom: 2rem;
+    }
+
+    .cards-container .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .cards-container .card {
+        width: 28vw;
+        margin-bottom: 2rem;
+    }
+
+    .card .img-container {
+        height: 28vw;
+    }
+
+    .footer .bar {
+        width: 20vw;
+    }
+
+    .footer .col-center .icons-container {
+        padding-left: 1rem;
     }
 }
