--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ ul {
 }
 
 a {
+    display: inline-block;
     text-decoration: none;
     color: inherit;
 }
@@ -191,7 +192,6 @@ a {
 }
 
 .main .main-header a {
-    display: inline-block;
     line-height: normal;
     margin-right: 1.2rem;
     padding: .8rem 2.5rem;
@@ -414,6 +414,10 @@ a {
     width: 80px;
 }
 
+.footer .col.right .icons-container {
+    font-size: .7rem;
+}
+
 .footer .col.right .icons-container i {
     margin-right: .7rem;
 }
@@ -430,6 +434,10 @@ a {
 
 .footer .col-center .icons-container i.play:hover {
     transform: scale(1.2);
+}
+
+.small-icon {
+    display: none;
 }
 
 @media screen and (max-width: 1100px) and (min-width: 701px) {
@@ -494,11 +502,114 @@ a {
         height: 28vw;
     }
 
+    .card .img-container .overlay {
+        line-height: 28vw;
+    }
+
     .footer .bar {
         width: 20vw;
     }
 
     .footer .col-center .icons-container {
         padding-left: 1rem;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    .small-icon {
+        display: inline-block;
+        width: 40px;
+    }
+
+    .sidebar {
+        width: 50px;
+    }
+
+    .sidebar a:not(.small-icon) {
+        display: none;
+    }
+
+    .sidebar .menu-list img {
+        width: auto;
+    }
+    
+    .sidebar .playlist {
+        display: none;
+    }
+
+    .sidebar .menu-footer {
+        height: auto;   
+    }
+
+    .menu-footer .account span {
+        display: none;
+    }
+
+    .main .main-content,
+    .main .main-header {
+        width: calc(100% - 50px);
+    }
+
+    .main .main-header {
+        left: 50px;
+    }
+
+    .main-content .cards-container .menu {
+        display: flex;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+
+    .main-content .cards-container .menu ul li:first-child,
+    .main-content .cards-container .menu ul li:nth-child(2),
+    .main-content .cards-container .menu ul li:nth-child(3) {
+        margin-bottom: 2rem;
+    }
+
+    .cards-container .row {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .cards-container .card {
+        width: 35vw;
+        margin-bottom: 2rem;
+    }
+
+    .card .img-container {
+        height: 35vw;
+    }
+
+    .card .img-container .overlay {
+        line-height: 35vw;
+    }
+
+    .footer {
+        padding: 0 .3rem;
+    }
+
+    .footer .col.left .img-container {
+        margin-right: .3rem;
+    }
+
+    .footer .col.left .title {
+        width: 30%;
+        margin-right: .5rem;
+    }
+
+    .footer .bar {
+        width: 20vw;
+    }
+
+    .footer .col-center .icons-container {
+        padding-left: 1rem;
+    }
+
+    .footer .col.right .icons-container i {
+        margin-right: .4rem;
+    }
+
+    .footer .col.right .bar {
+        width: 60px;
     }
 }
